css/custom-style.css
table {
	border-collapse: collapse;
	border: 1px solid #000000;
}

table td {
	border: 1px solid #000000;
}

.navbar-default .navbar-nav>li>a {
	color: #333;
}

.navbar-default .navbar-brand {
	color: #333;
}

.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus {
	color: #6CF;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
	color: #6CF;
}

.navbar-brand {
	font-size: 27px;
}

.graph {
	height: 150px;
	margin: 0.5em auto 0.5em 0;
}

#demo-header {
	display: none;
	
}

#demo-header {
	margin-bottom: 10px;
}

#demo-container {
	background-color:#000000;
}

#webcam {
	background-color:#000000;
}

.bigNumber {
	font-size: 15px;
	color: #FFF;
	padding: 0;
}

.iconImg {
	width: 63px;
	height: 63px;
}

.labelit {
	color:#FFFFFF;
	display:block;
}

.messageIt {
	color:#FF0000;
}

dt, dd {
	padding-top: 8px;
}

#logo-banner-holder {
	padding-left: 0px;
	padding-right: 0px;
	overflow: hidden;
}

#logo-banner {
	width: auto;
	height: 150px;
	display: block;
	margin: 0 auto;
}

#logo {
	height: 100px;
	padding-left: 0px;
}

@media (min-width: 768px) {
	#logo-img {
		margin-top: 15px;
		margin-bottom: 10px;
		height: 115px;
	}
}

@media (max-width: 768px) {
	#logo-img {
		height: 75px;
	}
}

#qrcode {
	padding-top: 5px;
	padding-right: 7px;
	float: right;
}

#qrtext {
	text-align: right;
	clear: both;
}

.carousel-pics {
	vertical-align: middle;
}

#slideshow {
	max-width: 1500px;
	margin-right: auto;
	margin-left: auto;
}
@media (max-width: 1000px) {
	#slideshow {
		max-height: 200px;
	}
}
@media (min-width: 1000px) {
	#slideshow {
		height: 450px;
	}
}

.footer {
	color: #777;
	text-align: center;
}

#readme-banner {
	background-image: url('../assets/banner.png');
	background-repeat: no-repeat;
	background-position: center center;
}

@media (max-width: 1000px) {
	#readme-banner {
	height: 125px;
	}
}

@media (min-width: 1000px) {
	#readme-banner {
	height: 225px;
	}
}

#readme-banner-text {
	color: #FFF;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.page-container {
	padding-right: 15px;
	padding-left: 15px;
	margin-right: auto;
	margin-left: auto;
}

@media (min-width: 768px) {
	.page-container {
		padding-right: 15px;
		padding-left: 15px;
		width: 700px;
	}
}

@media (min-width: 992px) {
	.page-container {
		padding-right: 15px;
		padding-left: 15px;	
		width: 700px;
	}
}

@media (min-width: 1200px) {
	.page-container {
		width: 920px;
	}
}

#arrow{
	position: absolute;
	z-index: 10;
	width: 237px;
	height: 238px;
	margin-left: 100px;
	left: 50%;
	margin-top: -250px;

	animation: blank 5s, slideInRight 1.5s 5s, fade 2s 1.5s; /*name duration delay*/
	-webkit-animation: blank 5s, slideInRight 1.5s 5s, fade 2s 1.5s;
	-moz-animation: blank 5s, slideInRight 1.5s 5s, fade 2s 1.5s;
	-o-animation: blank 5s, slideInRight 1.5s 5s, fade 2s 1.5s;
	animation-iteration-count: 1, 1, infinite;
	-webkit-animation-iteration-count: 1, 1, infinite;
	-moz-animation-iteration-count: 1, 1, infinite;  
	-o-animation-iteration-count: 1, 1, infinite;
}

@keyframes blank {
0%   {opacity:0;}
100% {opacity:0;}
}

@-webkit-keyframes blank {
0%   {opacity:0;}
100% {opacity:0;}
}

@-moz-keyframes blank {
0%   {opacity:0;}
100% {opacity:0;}
}

@-o-keyframes blank {
0%   {opacity:0;}
100% {opacity:0;}
}

@keyframes fade {
0%   {opacity:1;}
50%   {opacity:0;}
100% {opacity:1;}
}

@-webkit-keyframes fade {
0%   {opacity:1;}
50%   {opacity:0;}
100% {opacity:1;}
}

@-moz-keyframes fade {
0%   {opacity:1;}
50%   {opacity:0;}
100% {opacity:1;}
}

@-o-keyframes fade {
0%   {opacity:1;}
50%   {opacity:0;}
100% {opacity:1;}
}

/*Thanks to github.com/daneden/animate.css !!!!!!*/
@-webkit-keyframes slideInRight {
  0% {
    opacity: 0;
    -webkit-transform: translateX(200px);
    transform: translateX(200px);
  }

  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes slideInRight {
  0% {
    opacity: 0;
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }

  100% {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

.videowrapper {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; 
    height: 0; 
    overflow: hidden;
}
.videowrapper iframe, 
.videowrapper object,
.videowrapper embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/*#fancy-button {
	-webkit-box-shadow: 0px 0px 25px 25px rgba(0,0,0,0.2);
	-moz-box-shadow: 0px 0px 25px 25px rgba(0,0,0,0.2);
	box-shadow: 0px 0px 25px 20px rgba(0,0,0,0.2);

	animation: blank 6.5s, fade 2s 6.5s;
	animation-iteration-count: 1, infinite;
	-webkit-animation-iteration-count: 1, infinite;
	-moz-animation-iteration-count: 1, infinite;  
}*/

#connectionStateAlert {
	width: 120px;
	float:right;
	display:none;
}

